# performance-framework

./: .coveragerc  .dockerignore  .env.example  .gitignore  .mise.toml  CLAUDE.md  Dockerfile  Matrix-Strike48_collections.postman_collection.json  README.md  docker-compose.cloud.yml  docker-compose.yml  justfile  pyproject.toml
.claude/: settings.local.json
.cursor/skills/visual-qa/: SKILL.md
.github/workflows/: ci.yml  docker.yml  links.yml  luna-smoke.yml.example  security.yml
api_tests/: generator.py  runner.py  testcase.py
api_tests/framework/: harness.py  logger.py  testcase.py
api_tests/harness/: __init__.py
dashboard/: app_state.py  discovery.py  index.html  influx.py  lifecycle.py  lighthouse_runner.py  livereload.py  mcp_server.py  queries.py  report.py  server.py  state.json  storage.py  test_codegen.py  visual_qa.py  vqa_cli.py
dashboard/routers/: analytics.py  api_tests.py  data_files.py  discovery.py  endpoints.py  health.py  lighthouse.py  profiles.py  proxy.py  run_control.py  runs.py  slo.py  visual_qa.py  webhooks.py
docs/: ARCHITECTURE.md  DESIGN_DECISIONS.md  PLUGINS.md  TESTING.md
docs/history/: k6-performance-framework-plan.md
k6/: main.js
k6/config/: endpoints.example.json  endpoints.json  options.js
k6/lib/: auth.js  checks.js  data.js  graphql.js  metrics.js  request.js
k6/queries/: agents.js  conversations.js  documents.js  jobs.js  knowledge.js  user.js
k6/scenarios/: read-operations.js  run-endpoints.js  run-sequence.js
luna_cli/: display.py
src/api_tests/: __init__.py  generator.py  luna.py  runner.py
src/api_tests/framework/: __init__.py  common_unittest.py  exception.py  harness.py  json_util.py  smoketestcase.py  testcase.py
src/api_tests/harness/: fastapi.py  http.py  influxdb.py  k6.py  python_server.py  server.py
src/cli/: __init__.py  client.py  main.py  repl.py
src/core/: config.py  state.py  storage.py
src/dashboard/: health_router.py  index.html  livereload.py  mcp_server.py  server.py
src/plugins/: __init__.py  base.py
src/plugins/discovery/: __init__.py  engine.py  router.py
src/plugins/lighthouse/: __init__.py  router.py  runner.py
src/plugins/performance/: __init__.py  queries.py  report.py  runner.py
src/plugins/performance/routers/: __init__.py  analytics.py  profiles.py  (+6 more)
src/plugins/test_generator/: __init__.py  codegen.py
src/plugins/ui_tests/: __init__.py  router.py
src/plugins/visual_qa/: __init__.py  agents.py  cli.py  router.py
tests/: conftest.py  test_discovery.py  test_influx.py  test_lifecycle.py  test_storage.py
tests/api/: conftest.py  test_contract.py  test_smoke.py
tests/components/dashboard/: conftest.py  test_dashboard.py
tests/components/discovery/: conftest.py  test_discovery.py
tests/components/influxdb/: conftest.py  test_influxdb.py
tests/components/k6/: conftest.py  test_k6.py
tests/e2e/: conftest.py  test_full_stack.py
tests/integration/: conftest.py  test_dashboard_full.py  test_discovery_to_config.py
tests/ui/: conftest.py
tests/ui/base/: page.py  ui_test_case.py
tests/ui/regression/: test_discover.py  test_endpoints.py  test_overview.py
tests/ui/smoke/: test_navigation.py
tests/unit/: conftest.py  test_discovery.py  test_influx.py  test_lifecycle.py  test_storage.py  test_visual_qa.py
website/: index.html
(+10 files in other folders)
