[project]
name = "performance-framework"
version = "0.1.0"
description = "k6 performance testing dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.133.1",
    "fastmcp>=3.0.2",
    "httpx>=0.28.1",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.41.0",
    "watchfiles>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28.1",
    "ruff>=0.9",
    "ty>=0.0.1a6",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["dashboard"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
