[project]
name = "performance-framework"
version = "0.1.0"
description = "k6 performance testing dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=40.5.1",
    "fastapi>=0.133.1",
    "fastmcp>=3.0.2",
    "httpx>=0.28.1",
    "prompt-toolkit>=3.0.52",
    "pyyaml>=6.0",
    "rich>=14.3.3",
    "typer>=0.24.1",
    "uvicorn[standard]>=0.41.0",
    "watchfiles>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28.1",
    "ruff>=0.9",
    "ty>=0.0.1a6",
    "faker>=24.0",
    "respx>=0.21",
    "coverage[toml]>=7.0",
    "testcontainers>=4.0",
]

[project.scripts]
luna = "luna_cli.main:main"

[tool.setuptools.packages.find]
include = ["luna_cli*", "api_tests*"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
pythonpath = ["dashboard", "."]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.coverage.run]
source = ["dashboard"]
parallel = true
omit = ["tests/*", "api_tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60
